manifests/traefik/overlay/dashboard-basicauth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-basicauth-middleware
  namespace: traefik-v2
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  basicAuth:
    secret: dashboard-auth-secret
    removeHeader: true
