manifests/traefik/overlay/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik-v2
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    cert-manager.io/cluster-issuer: letsencrypt-dns01-production
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.lab.supermorphic.com`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: dashboard-basicauth-middleware
  tls:
    secretName: traefik-dashboard-tls
